--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
@@ -110,6 +110,17 @@ $dyfi-question-indent: 1.3em;
 		}
 	}
 
+.eqtime {
+	font-size: .8em;
+	font-weight: normal;
+	> p {
+		line-height: 80%;
+		margin: .1em;
+	}
+}
+
+
+
 	// Location/Comments/Contact
 	> label {
 		display:block;
@@ -140,6 +151,13 @@ $dyfi-question-indent: 1.3em;
 			font-size:1.5em;
 		}
 	}
+}
+
+.dyfiIframe {
+		width: 100%;
+		height: 500px;
+		border: 0;
+		frameBorder: 0;
 }
 
 .dyfi-text-input {
