Added code for small in labels

--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
@@ -110,21 +110,15 @@ $dyfi-question-indent: 1.3em;
 		}
 	}
 
-.eqtime {
-	font-size: .8em;
-	font-weight: normal;
-	> p {
-		line-height: 80%;
-		margin: .1em;
-	}
-}
-
-
-
 	// Location/Comments/Contact
 	> label {
 		display:block;
 		@include question-question();
+
+		> small {
+			font-weight:normal;
+			display:block;
+		}
 	}
 
 	> button {
