added download classes

--- a/src/htdocs/modules/base/0-0-1/css/index.scss
+++ b/src/htdocs/modules/base/0-0-1/css/index.scss
@@ -1,4 +1,6 @@
 /* This file should import partials for the base module/modulepages. */
 
+@import 'EventModulePage';
 @import 'ContentsXML';
 @import 'SummaryPage';
+
