--- a/src/htdocs/modules/base/0-0-1/css/_ContentsXML.scss
+++ b/src/htdocs/modules/base/0-0-1/css/_ContentsXML.scss
@@ -1,25 +1,30 @@
 .contentsxml {
 	clear: both;
-	margin: 1em 0;
+	margin: .5em 0;
 }
 
 .contentsxml-content {
-	margin: 1em 0;
-	border-top:1px solid #ddd;
+	margin: .5em 0;
 
 	// header
 	> header > h1 {
-		margin: 1em 0 0.1em;
-		font-size: 1em;
-		font-weight: bold;
+		margin: 0;
+		font-size: .9em;
+		font-weight: normal;
+	}
+
+	> .caption {
+		color: #666;
+		font-style: italic;
+		font-size:.8em;
 	}
 
 	// available formats
 	> .formats {
 		list-style:none;
 		margin:0 0 1em;
-		padding:0;
-		font-size:smaller;
+		font-size:.8em;
+		padding-left: 0px;
 
 		> li {
 			float:left;
