--- a/src/htdocs/modules/base/0-0-1/css/_EventModulePage.scss
+++ b/src/htdocs/modules/base/0-0-1/css/_EventModulePage.scss
@@ -1,12 +1,5 @@
-.page-downloads-loaded {
-	border: 1px solid #000;
-	padding: 8px;
-
-	> header > a {
-		text-decoration: none;
-		color: #000;
-		cursor: default;
-	}
+.accordian-page-downloads {
+	margin: 0 0 1em;
 }
 
 .page-download {
