--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -8,6 +8,7 @@
 @import 'alerts';
 
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
+@import '../../../node_modules/hazdev-template/src/htdocs/css/accordion.scss';
 
 /* svg image map */
 @import '../../../node_modules/hazdev-svgimagemap/src/svgimagemap/SvgImageMap.scss';
@@ -26,10 +27,6 @@
 }
 .page-content {
 	margin-top:0;
-}
-
-.page-downloads {
-	margin-top: 1em;
 }
 
 .clearfix:after {
