Update styles for accordion-content sections on shakemap and hypocenter tabs.

--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -78,6 +78,10 @@
 	}
 }
 
+.networkmagnitude > .accordion-content {
+		padding:0;
+	}
+
 @media screen and (max-width:767px) {
 
 	// Scientific -> Hypocenter -> Phases
