--- a/src/htdocs/modules/impact/0-0-1/css/_PagerPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_PagerPage.scss
@@ -19,63 +19,55 @@
 	.mmi {
 		display:inline-block;
 		width:64px;
-		padding:2px 8px;
+		padding:2px 4px;
 		text-align:center;
 		margin-right:8px;
 		text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
 	}
 
-	.mmiI {
-		border:1px solid #999;
+	table.pager-exposures {
+		border:1px solid #ccc;
+		background:#fff;
+		border-spacing: 0;
+		border-collapse: collapse;
+		width:100%;
+		margin:1em 0;
+
+		.roman {
+			width:100%;
+			border-radius:2px;
+			background-image: linear-gradient(to bottom, rgba(255,255,255,0.15),rgba(255,255,255,0));
+		}
+
+		td,
+		th {
+			padding:8px 10px;
+		}
+
+		> thead > tr {
+			background: #ededed;
+
+			> th {
+				text-shadow: 1px 1px 0 rgba(255,255,255,0.5);
+				border-bottom:1px solid #ccc;
+
+				> abbr {
+					border-bottom: 1px dotted;
+					cursor:default;
+				}
+			}
+		}
+
+		> tbody tr > td {
+			border-top: 1px solid #e0e0e0;
+			border-bottom: 1px solid #e0e0e0;
+			border-left: 1px solid #e0e0e0;
+		}
+
 	}
 
-	.pager-exposures {
-		list-style:none;
-		margin:0;
-		padding:0;
-
-		> li {
-			clear:left;
-			margin:8px 0;
-			padding:0;
-
-			.mmi {
-				cursor:pointer;
-			}
-
-			.population-value {
-				float:right;
-				margin:4px 0;
-			}
-
-			> dl {
-				display:none;
-				float:left;
-				width:100%;
-				margin:4px 0 8px 0;
-				padding:0 0 0 72px;
-				font-size:.8em;
-				color:#999;
-
-				> dt, > dd {
-					display:block;
-					float:left;
-					display:inline-block;
-					margin:0 8px 0 0;
-				}
-				> dt {
-					clear:left;
-
-					&:after {
-						content:':';
-					}
-				}
-			}
-			&.expanded > dl {
-				display:block;
-			}
-
-		}
+	.population-value {
+		text-align:right;
 	}
 
 	.pager-cities {
