--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -9,6 +9,7 @@
 
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
 @import '../../../node_modules/hazdev-accordion/src/accordion.scss';
+@import '../../../node_modules/hazdev-template/src/htdocs/css/figcaption.scss';
 
 /* svg image map */
 @import '../../../node_modules/hazdev-svgimagemap/src/svgimagemap/SvgImageMap.scss';
