changed disclaimer class to dyfi-disclaimer on both the DYFIFormPage.js and DYFIFormPage.scss

--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
@@ -194,7 +194,7 @@ $dyfi-question-indent: 1.3em;
 	padding: .5em 0;
 }
 
-.disclaimer {
+.dyfi-disclaimer {
 	position: absolute;
 	text-align: right;
 	top:0;
