Remove figcaption.scss import from project. This is included in the earthquake website.

--- a/src/htdocs/css/template.scss
+++ b/src/htdocs/css/template.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/hazdev-template/src/htdocs/css/template';
 @import '../../../node_modules/hazdev-template/src/htdocs/css/responsive-table';
 @import '../../../node_modules/hazdev-template/src/htdocs/css/flexible-grid';
+@import '../../../node_modules/hazdev-template/src/htdocs/css/figcaption.scss';
 img {max-width:100%;}
