--- a/src/htdocs/modules/impact/0-0-1/css/_PagerPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_PagerPage.scss
@@ -4,6 +4,7 @@
 		display:block;
 		font-size:.8em;
 		color:#666;
+		margin:0.5em 0;
 	}
 	.legend {
 		font-style:italic;
@@ -23,13 +24,16 @@
 		text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
 	}
 
+	figure {
+		margin:0;
+	}
+
 	table.pager-exposures,
 	table.pager-cities {
 		border:1px solid #ccc;
 		border-spacing: 0;
 		border-collapse: collapse;
 		width:100%;
-		margin:1em 0 0.5em;
 
 		.mmi {
 			width:100%;
