added styles to support time and location next to map,  and moved nearby cities here from InteractiveMap.scss

--- a/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
@@ -1,3 +1,24 @@
 .summary-attribution {
 	margin-top:1.0em;
 }
+
+.summary-nearby-cities {
+	> ol {
+		list-style-type:none;
+		padding-left: 0;
+	}
+}
+
+.summary-time {
+	> ol {
+		list-style-type:none;
+		padding-left:0;
+	}
+}
+
+.summary-location {
+	> ol {
+		list-style-type:none;
+		padding-left:0;
+	}
+}
