added no-bullet class to replace triple use of same style

--- a/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
@@ -2,23 +2,7 @@
 	margin-top:1.0em;
 }
 
-.summary-nearby-cities {
-	> ol {
-		list-style-type:none;
-		padding-left: 0;
-	}
-}
-
-.summary-time {
-	> ol {
+.no-bullets {
 		list-style-type:none;
 		padding-left:0;
-	}
-}
-
-.summary-location {
-	> ol {
-		list-style-type:none;
-		padding-left:0;
-	}
 }
