--- a/src/htdocs/modules/base/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/base/0-0-1/css/_SummaryPage.scss
@@ -1,56 +1,64 @@
 /*** summary section styles ***/
 .summary {
-	display:block;
-	position:relative; // needed for :after selector
-	border:1px solid #ccc;
+	position:relative;
+	display: block;
+	margin: 1em 0;
+	padding: 1em;
+	color:#444;
+	border: 1px solid #e5e5e5;
 	text-decoration:none;
-	color:#000;
-	margin-bottom: 8px;
-	height:122px;
-	font-size:14px;
-	cursor:pointer;
 
-	.header {
-		position:relative;
-		float:left;
-		padding: 10px;
-		height:120px;
-		width:120px;
-		border-right:1px solid #ccc;
-		background:rgb(247,247,247);
-		text-align:center;
+	&:hover {
+		background:rgba(48, 106, 194, 0.05);
 	}
 
-	.info {
-		position:relative;
-		padding:12px 10px 0 130px;
+	> .info {
+		> ul {
+			margin:0;
+			padding:0;
+			list-style: none;
+
+			> li {
+				display: inline-block;
+				max-width: 100px;
+				text-align: center;
+				line-height: 1;
+
+				> span {
+					display:block;
+				}
+				> abbr {
+					font-size: 12px;
+					color: #999;
+					border-bottom:1px dotted;
+				}
+			}
+		}
 	}
-
-}
-
-.summary:hover {
-	background:rgba(158, 192, 248, 0.1);
-}
-
-.summary.preferred:after {
-	position: absolute;
-	top: 1px;
-	left: 4px;
-	content: '\2713'; // checkmark
-	font-size: 16px;
-	color: #fff;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
-	z-index:3;
 }
 
 .summary.preferred:before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: '\2713'; // checkmark
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+	z-index:3;
+	width:1.4em;
+	line-height:1.4em;
+	font-size:0.875em;
+	text-align: center;
+}
+
+.summary.preferred:after {
 	content: '';
 	position: absolute;
 	top: -1px;
 	left: -1px;
 	width: 0;
 	height: 0;
-	border-right: 35px solid transparent;
-	border-top: 35px solid #49a34b;
+	border-right: 2em solid transparent;
+	border-top: 2em solid #49a34b;
 	z-index:2;
 }
