Add stylesheet for FocalMechanismPage. Update styles for summary section.

--- a/src/htdocs/modules/scientific/0-0-1/css/index.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/index.scss
@@ -19,4 +19,5 @@ canvas {
 @import "ScientificSummaryPage";
 @import "HypocenterPage";
 @import "MomentTensorPage";
+@import "FocalMechanismPage";
 @import "IrisProductsPage";
