--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
@@ -211,7 +211,6 @@ $dyfi-question-indent: 1.3em;
 	> .modal-footer {
 		> button {
 			margin:2px 2px 2px 4px;
-			padding:2px 6px 3px 6px;
 			cursor:pointer;
 
 			&.dyfi-button-cancel {
@@ -231,6 +230,6 @@ $dyfi-question-indent: 1.3em;
 
 .dyfi-form > .modal-footer,
 .locationview > .modal-footer {
-	padding: 0;
+	padding: 4px;
 	text-align:right;
 }
