--- a/src/htdocs/modules/base/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/base/0-0-1/css/_SummaryPage.scss
@@ -5,42 +5,39 @@
 	margin: 1em 0;
 	padding: 1em;
 	border: 1px solid #e5e5e5;
-	text-decoration:none;
 
 	&:hover {
 		background:rgba(48, 106, 194, 0.05);
 	}
 
-	> .info {
-		> ul {
-			margin:0;
-			padding:0;
-			list-style: none;
+	> ul {
+		list-style: none;
+		margin:0;
+		padding:0;
 
-			> li {
-				display: inline-block;
-				max-width: 100px;
-				text-align: center;
-				line-height: 1;
-				vertical-align: middle;
+		> li {
+			display: inline-block;
+			vertical-align: middle;
+			text-align: center;
+			max-width: 100px;
+			line-height: 1;
 
-				&.image > img {
-					width:2.5em;
-					height:2.5em;
-				}
+			&.image > img {
+				width:2.5em;
+			}
 
-				&.summary-hide {
-					display:none;
-				}
+			&.summary-hide {
+				display:none;
+			}
 
-				> span {
-					display:block;
-				}
-				> abbr {
-					font-size: 12px;
-					color: #999;
-					border-bottom:1px dotted;
-				}
+			> span {
+				display:block;
+			}
+
+			> abbr {
+				font-size: 0.6875em;
+				color: #999;
+				border-bottom:1px dotted;
 			}
 		}
 	}
@@ -81,11 +78,12 @@ a.summary:hover {
 }
 
 @media screen and (min-width:768px) {
-	.summary > .info > ul > li {
+
+	.summary > ul > li {
+		font-size:1.125em;
 
 		&.image > img {
 			width:5.5em;
-			height:5.5em;
 		}
 
 		&.summary-hide {
