--- a/src/htdocs/modules/scientific/0-0-1/css/_FocalMechanismPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_FocalMechanismPage.scss
@@ -1,10 +1,3 @@
-.mechanism-summary > .info {
-
-	> .title {
-		margin: 0 0 1em;
-	}
-
-	> ul > li {
-		width:25%;
-	}
+.mechanism-summary > ul > li {
+	width:25%;
 }
