Moved datatable sortview styles from hypocenter page to general page rules for re-usability.

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -43,3 +43,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+.datatable > .datatable-tools > .sortview {
+	float:left;
+	margin-right:1em;
+}
