--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -57,7 +57,7 @@
 	padding:0;
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width:559px) {
 
 	// Scientific -> Hypocenter -> Phases
 	table.hypocenter-phase {
@@ -81,11 +81,15 @@
 	}
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:560px) {
 
 	table.hypocenter-phase {
 		> tbody {
 			> tr {
+				> th {
+					background:none;
+					font-weight:normal;
+				}
 				> .distance,
 				> .azimuth,
 				> .time,
@@ -100,10 +104,19 @@
 				}
 			}
 		}
+		> thead > tr > th {
+			text-align:center;
+		}
 	}
 	table.networkmagnitude-stations {
 		> tbody {
 			> tr {
+				background: #fafafa;
+
+				> th {
+					background:none;
+					font-weight:normal;
+				}
 				> .amplitude,
 				> .period,
 				> .magnitude,
@@ -116,6 +129,9 @@
 					text-align:center;
 				}
 			}
+		}
+		> thead > tr > th {
+			text-align:center;
 		}
 	}
 }
