--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIPage.scss
@@ -3,8 +3,6 @@
 
 .dyfi-responses {
 
-	margin-top:10px;
-
 	/* span with role="button" */
 	> .button {
 		display:inline-block;
@@ -31,6 +29,11 @@
 					display:block;
 					color:#999;
 				}
+			}
+
+			> th {
+				font-weight:normal;
+				background:none;
 			}
 
 			> td, > th {
@@ -63,7 +66,7 @@
 
 .dyfi-tablist {
 	> .tablist-panel {
-		padding:10px;
+		padding:1em;
 	}
 }
 
@@ -81,13 +84,7 @@
 	background:#eee;
 }
 
-@media screen and (max-width: 767px) {
-
-	.dyfi-tablist {
-		> .tablist-panel {
-			padding:5px;
-		}
-	}
+@media screen and (max-width: 559px) {
 
 	.dyfi-error,
 	.dyfi-info {
@@ -102,7 +99,7 @@
 	}
 
 	.dyfi-responses {
-		margin-top:15px;
+
 		.dyfi {
 			/*** Label the data ***/
 			td:nth-of-type(1):before { content:"MMI"; }
@@ -110,9 +107,13 @@
 			td:nth-of-type(3):before { content:"Distance"; }
 
 			> tbody > tr {
+				> th {
+					font-weight:bold;
+				}
 
 				> .location > small {
 					display: inline;
+					margin-left: 0.5em;
 				}
 
 				> td, > th {
