Remove top margin from dyfi form header

--- a/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
+++ b/src/htdocs/modules/impact/0-0-1/css/_DYFIFormPage.scss
@@ -207,8 +207,14 @@ $dyfi-question-indent: 1.3em;
 }
 
 .dyfi-form {
-	header {
-		position: relative;
+	> .modal-content {
+		> header {
+			position: relative;
+
+			> .felt-header {
+				margin-top: 0;
+			}
+		}
 	}
 
 	> .modal-footer {
