--- a/src/htdocs/css/_event-footer.scss
+++ b/src/htdocs/css/_event-footer.scss
@@ -1,12 +1,15 @@
 .event-footer {
 	clear: both;
-	color: #999999;
-	background-color: white;
-	padding: 1em 0;
 	margin: 1em 0 0;
 	border-top: 1px solid #dddddd;
 
 	> a {
 		display:block;
+	}
+
+	> ol.contributors {
+		font-size:0.75em;
+		padding: 0 2em;
+		margin: 2em 0;
 	}
 }
