Set up common CSS for popup info

--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -36,15 +36,11 @@
 				margin-left:0;
 			}
 
-			> strong, > span {
-				display:block;
-			}
-
 			> strong {
 				font-size:.8em;
 			}
 
-			> small {
+			> abbr {
 				font-size:.6875em;
 				color:#444;
 			}
